--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
-
+body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    color: white;
+}
+div.header {
+    text-align: center;
+    
+}
