--- a/style.css
+++ b/style.css
@@ -8,4 +8,10 @@ body {
 }
 div.header {
     text-align: center;
+    height: 40px;
+}
+img.logo {
+    float: left;
+    height: 40px;
+    width: 40px;
 }
