--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ div.header {
 h1.title {
     padding-top: 6px;
     padding-bottom: 6px;
+    height: 48px;
 }
 img.logo {
     position: absolute;
