--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #18185C;
+    background-color: #121212;
     color: white;
     font-family: 'Poppins', sans-serif;
 }
@@ -11,7 +11,6 @@ div.header {
     justify-content: center;
     align-items: center;
     height: 60px;
-    background-color: #18184D;
 }
 h1.title {
     padding-top: 6px;
