--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ div.header {
     align-items: center;
     height: 60px;
 }
-div.header-transistion {
+div.header-transition {
     background-image: linear-gradient(#121212, yellow);
     height: 20px;
 }
